got download underlying data button to work

--- a/national_press.html
+++ b/national_press.html
@@ -113,8 +113,11 @@
                 <a href="cnn_1year.png" download="cnn_1year">
                     <button class="dlbutton">Download CNN Image</button>
                 </a>
+                <a href="Ukraine_term_association_FOX_CNN_2023.xlsx" download="Ukraine_term_association_FOX_CNN_2023">
                     <button class="dlbutton">Download Underlying Data</button>
-            </div>
+                </a>
+
+                </div>
 </div>
 
 
