--- a/national_press.html
+++ b/national_press.html
@@ -84,7 +84,7 @@
                 <li>The word clouds below visualize the frequency of use for each word mentioned within a three-minute timeframe of the term "Ukraine" being mentioned</li>
                 <li>The visualization is based on the data collected over the year 2023 for the two major US-based TV networks: FoxNews and CNN</li>
                 <li>The frequency of use is depicted by the size: the bigger a particular term in the cloud - the more freqnently it was used in conjunction with the term "Ukraine"</li>
-                <li>Similarly, the smaller a particular term in the cloud - the less freqnently it was used in conjunction with the term "Ukraine"</li>
+                <li>Similarly, the smaller a particular term in the cloud - the less frequently it was used in conjunction with the term "Ukraine"</li>
 
             </div>
 
@@ -97,8 +97,6 @@
             <li class="centered" style="line-height: 2">In 2023, both sets of media sources published roughly the same proportional amount of content referencing "Ukraine" with media sources most often tweeted by Republican voters publishing approximately 6% more than media sources most often tweeted by Democrat voters.</li>
             <br>
             <li class="centered" style="line-height: 2">In 2023, media sources most often tweeted by Republican voters published approximately 11% more content about Ukraine including close mentions of "corrupt" or "corruption" than media sources most often tweeted by Democrat voters. </li>
-
-            <br> <br>
 
                <div class="centered">
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; align-items: center;">
@@ -119,8 +117,6 @@
 
                 </div>
 </div>
-
-
         </div> 
         <hr>
     </body>
