added source citation and title to the clouds, added with help of ChatGPT to project description

--- a/national_press.html
+++ b/national_press.html
@@ -103,20 +103,20 @@
 
 
             <div class="centered">
-                 <!-- Add title here -->
+                <h2 class="wordcloud-title">FoxNews and CNN discuss Ukraine in very different ways</h2>
 
                 <div id="wordcloud-container" class="centered">
                     <div class="wordcloud-card">
-                        <h2 class="wordcloud-title">FoxNews</h2>
+                        <h3 class="wordcloud-title">FoxNews</h3>
                         <img class="wordcloud-image" src="fox_1year.png" alt="Fox 1-Year Wordcloud">
                     </div>
                     <div class="wordcloud-card">
-                        <h2 class="wordcloud-title">CNN</h2>
+                        <h3 class="wordcloud-title">CNN</h3>
                         <img class="wordcloud-image" src="cnn_1year.png" alt="CNN 1-Year Wordcloud">
                     </div>
                 </div>
 
-                <!-- add footnote here -->
+                <h5 class="wordcloud-title">Source: mediacloud.org</h5>
 
         
                 <div style="display: flex; gap: 20px; justify-content: center; margin-top: 20px;">
