fixed spelling again

--- a/national_press.html
+++ b/national_press.html
@@ -83,8 +83,8 @@
                 <h3>How to interpret the Word Clouds below</h3>
                 <li>The word clouds below visualize the frequency of use for each word mentioned within a three-minute timeframe of the term "Ukraine" being mentioned</li>
                 <li>The visualization is based on the data collected over the year 2023 for the two major US-based TV networks: FoxNews and CNN</li>
-                <li>The frequency of use is depicted by the size: the bigger a particular term in the cloud - the more freqnently it was used in conjunction with the term "Ukraine"</li>
-                <li>Similarly, the smaller a particular term in the cloud - the less freqnently it was used in conjunction with the term "Ukraine"</li>
+                <li>The frequency of use is depicted by the size: the bigger a particular term in the cloud - the more frequently it was used in conjunction with the term "Ukraine"</li>
+                <li>Similarly, the smaller a particular term in the cloud - the less frequently it was used in conjunction with the term "Ukraine"</li>
 
             </div>
 
