--- a/tv_media.html
+++ b/tv_media.html
@@ -29,7 +29,7 @@
 
             <br>
 
-            <p class="centered"> <strong>Put simply, extreme values (less than -1 or more than 1) indicate a station used this word much more frequently or much less frequently than the average of all three stations.</strong> Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, download the excel below.</p>
+            <p class="centered">Put simply, extreme values (less than -1 or more than 1) indicate a station used this word much more frequently or much less frequently than the average of all three stations. Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, download the excel below.</p>
 
             <br><br>
 
