finalized home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <script src="main.js" defer></script>
-         <link rel="icon" type="image/png" href="Ukraine-flag-icon-on-transparent-background-PNG.png">
+        <link rel="icon" type="image/png" href="Ukraine-flag-icon-on-transparent-background-PNG.png">
     </head>
 
     <body>
@@ -52,7 +52,7 @@
 <!---------  Chicago citation --------->
 <p class="centered">Chicago</p>
 <div class="centered" id="copyContainerChicago">
-    <p class="centered" id="textToCopyChicago">Luke, Schields, Sly Yushchyshyn, and Alina Beskrovna. "How the War in Ukraine is Portrayed in the American Media." code4policy. January 14, 2024. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <p class="centered" id="textToCopyChicago">Schields, Luke, Sly Yushchyshyn, and Alina Beskrovna. "How the War in Ukraine is Portrayed in the American Media." code4policy. January 14, 2024. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
     <button id="copyButtonChicago">Copy Citation</button>
 </div>
 
@@ -62,7 +62,7 @@
 <p class="centered">MLA</p>
 <body>
     <div class="centered" id="copyContainerMLA">
-    <p class="centered" id="textToCopyMLA">Luke, Schields, Yushchyshyn, Sly, and Beskrovna, Alina. "How the War in Ukraine is Portrayed in the American Media." <em>code4policy</em>, 14 Jan. 2024, https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <p class="centered" id="textToCopyMLA">Schields, Luke, Yushchyshyn, Sly, and Beskrovna, Alina. "How the War in Ukraine is Portrayed in the American Media." <em>code4policy</em>, 14 Jan. 2024, https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
     <button id="copyButtonMLA">Copy Citation</button>
     </div>
 </body>
