--- a/tv_media.html
+++ b/tv_media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>National Press</title>
+        <title>Television Media</title>
         <link href="styles.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
     <!-- national tv section -->
         <div class="centered">
 
-            <p class="centered">While most major network television new sources have covered the war in Ukraine, not all coverage is the same. Different stations have different agendas and their coverage of events is colored by these biases. The table below analyzes the coverage of Ukraine by the three main network television sources by examining their relative use of seleted words included in their coverage of Ukraine.</p>
+            <p class="centered">While most major network television news sources have covered the war in Ukraine, not all coverage is the same. Different stations have different agendas and their coverage of events is colored by these biases. The table below analyzes the coverage of Ukraine by the three main network television sources: CNN, Fox, and MSNBC. The table illustrates their relative use of selected words included in their coverage of Ukraine.</p>
 
             <br>
 
